--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Load Alert</title>
+<style>
+body {
+  background-color:#FFFFFF;
+}
+#myDIV {
+  height:300px;
+  background-color:#FFFFFF;
+}
+.bluediv {
+  width:200px;
+  background-color:lightblue;
+  margin-left: 25px;
+}
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
+<title>YoungerLife.Org</title>
 <script>
 function showAlertOnLoad() {
-  alert("The entire page has loaded!");
+  //alert("The entire page has loaded!");
 }
 </script>
 </head>
 <body onload="showAlertOnLoad()">
-  <h1>Welcome to my page!</h1>
+  <centre><h1>Welcome to my page!</h1><centre/>
   <p>This alert appeared after everything loaded.</p>
+
+  <ol>
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Milk</li>
+</ol>
+
+<p><a href="../Smashing/">S.M.A.S.H.I.N.G Game of Life</a></p>
+  </div>
+</div>
 </body>
 </html>
