--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ function showAlertOnLoad() {
     <li>Milk</li>
 </ol>
 
-<p><a href="../Smashing/">S.M.A.S.H.I.N.G Game of Life</a></p>
+<p><a href="smashing.html">S.M.A.S.H.I.N.G Game of Life</a></p>
   </div>
 </div>
 </body>
