--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ function showAlertOnLoad() {
 <body onload="showAlertOnLoad()">
   <centre><h1>Welcome to</h1><centre/>
   <centre><h1>YoungerLife.Org</h1><centre/>
-  <p>Games are current unfinsihed - but feel free to take a peep</p>
+  <p>Games are not yet finsihed - but feel free to take a peep</p>
 <div class="centered-container">
   <div class="left-aligned-content">
 
