--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ function showAlertOnLoad() {
     </ol>
     <h2>Secondary School Level Games</h2>
   <ol>
-  <li><a href="treasuretrail.html">GCSE Flashcard Games (Coming Soon)</a></li>
+  <li><a href="">GCSE Flashcard Games (Coming Soon)</a></li>
   <li><a href="">Spelling bingo (Coming Soon)</a></li>
   </ol>
     <h2>Adult Wellbeing Games</h2>
