--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@ function showAlertOnLoad() {
   //alert("The entire page has loaded!");
 }
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NNF00JYK5M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NNF00JYK5M');
+
+</script>
 </head>
 <body onload="showAlertOnLoad()">
   <centre><h1>Welcome to</h1><centre/>
