--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ function showAlertOnLoad() {
     <li><a href="treasuretrail.html">Treasure Trail Handwriting Game</a></li>
     <li><a href="fractionmonster.html">Fraction Monster Maths Game</a></li>
     <li><a href="">Multiplayer Times Table Olympics (Coming Soon)</a></li>
-    <li><a href="">Spelling bingo (Coming Soon)</a></li>
+    <li><a href="MultiLanguageFirstWords.html">Visual Spelling Bingo (Multi-language)</a></li>
     </ol>
     <h2>Secondary School Level Games</h2>
   <ol>
